Change pie chart colors

--- a/templates/home.html
+++ b/templates/home.html
@@ -598,21 +598,21 @@ function draw_pie_chart() {
     }
 
     const customColors = [
-        '#377eb8',
-        '#ff7f00',
-        '#4daf4a',
-        '#f781bf',
-        '#a65628',
-        '#984ea3',
-        '#e41a1c',
-        '#dede00',
+        '#345511',
+        '#41658A',
+        '#4FB477',
+        '#1C3A13',
+        '#001242',
+        '#0094C6',
+        '#8963BA',
         '#a6cee3',
         '#1f78b4',
         '#b2df8a',
         '#33a02c',
-        '#fb9a99',
-        '#e31a1c',
-        '#fdbf6f'
+        '#EAE6E5',
+        '#98C1D9',
+        '#AFE3C0',
+        '#0471A6'
     ]
 
     fetch('/get-pie-data')
